HW22. Added the choice of the second method of adding a user and fixed some bugs

--- a/HW22/roles/hw22/templates/logrotate.j2
+++ b/HW22/roles/hw22/templates/logrotate.j2
@@ -1,4 +1,4 @@
-/tmp/log_service.log {
+{{log_service.logfile_locate}} {
   rotate {{ log_service.rotate }}
   {{ log_service.period }}
   missingok
